--- a/portifolio.css
+++ b/portifolio.css
@@ -68,7 +68,7 @@ header a:hover {
 
 header ul li {
     display: inline-block;
-    padding: 0 20px;
+    padding: 0 30px;
 }
 
 
@@ -215,7 +215,17 @@ section.sobre {
 
 section.sobre .flex {
     align-items: center;
-    gap: 60px;
+    gap: 20px;
+}
+
+.img-sobre {
+    width: 60%;
+}
+
+.img-sobre img {
+    width: 100%;
+    height: auto;
+    border-radius: 30px;
 }
 
 .sobre .txt-sobre {
@@ -267,13 +277,13 @@ section.portifolio .flex {
 }
 
 .img-port {
-    width: 360px;
+    width: 100%;
     height: 460px;
     margin: 0 18px;
     background-size: cover;
-    background-position: 100% 0;
+    /* background-position: 1% 0; */
     position: relative;
-    transition: 2s;
+    transition: 3s;
     cursor: pointer;
 }
 
@@ -389,6 +399,99 @@ footer {
     section.sobre .flex {
         flex-direction: column;
         text-align: center;
-        margin: 70px;
+        margin: 40px;
+    }
+
+    .txt-topo-site h1 {
+        line-height: 1;
+    }
+}
+
+/*--- MENU MOBILE ---*/
+
+#menu-toggle {
+    display: none;
+}
+
+.menu-btn {
+    display: none;
+    font-size: 30px;
+    color: white;
+    cursor: pointer;
+    position: absolute;
+    right: 20px;
+    top: 25px;
+    z-index: 200;
+}
+
+
+.menu-mobile {
+    position: fixed;
+    top: 0;
+    right: -300px;
+    height: 100vh;
+    width: 260px;
+    background: #0d1117;
+    box-shadow: -2px 0 10px rgba(0,0,0,0.3);
+    transition: .3s;
+    padding-top: 80px;
+    z-index: 150;
+}
+
+.menu-mobile ul {
+    list-style: none;
+    padding: 0;
+}
+
+.menu-mobile ul li {
+    padding: 20px;
+    border-bottom: 1px solid #222;
+}
+
+.menu-mobile a {
+    color: white;
+    font-size: 20px;
+    text-decoration: none;
+    display: block;
+}
+
+.menu-mobile a:hover {
+    color: #b74b4b;
+}
+
+
+.overlay-mobile {
+    display: none;
+    position: fixed;
+    inset: 0;
+    background: rgba(0,0,0,0.5);
+    z-index: 100;
+}
+
+
+#menu-toggle:checked ~ .menu-mobile {
+    right: 0;
+}
+
+#menu-toggle:checked ~ .overlay-mobile {
+    display: block;
+}
+
+
+@media (max-width: 900px) {
+    header {
+        box-shadow: none;
+    }
+    .menu-desktop {
+        display: none;
+    }
+    .menu-btn {
+        display: block;
+        position: fixed;
+        padding: 10px;
+    }
+    .menu-mobile ul li {
+        padding: 18px;
+        gap: 22px;       
     }
 }
